# KANS-CPP

./: .gitignore  CMakeLists.txt  ConvKAN.cpp  ConvKAN.h  ConvKANLayer.cpp  ConvKANLayer.h  KAN.cpp  KAN.h  KANsLinear.cpp  KANsLinear.h  Readme.md  UI.cpp  UI.h  build.sh  convolution.cpp  dataset.h  main.cpp  network.h  run.sh  test.cpp  testKAN.cpp  testKAN.h  test_math.cpp  train.cpp  train.h
model/: KAN.pt  KANFUNCTION.pt
run-build/: opencvbuild.sh  sfmlbuild.sh
